Telemetry/kube/grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kakey-1
  name: kakey-grafana-deployment
  labels:
    app: kakey-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kakey-grafana
  template:
    metadata:
      labels:
        app: kakey-grafana
    spec:
      containers:
      - name: kakey-grafana
        image: grafana/grafana:9.4.7
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources/datasource.yml
          subPath: grafana-datasource.yml
      volumes:
      - name: datasources
        configMap:
          name: grafana-datasource-config
