Telemetry/kube/loki-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: kakey-loki-deployment
  labels:
    app: kakey-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kakey-loki
  template:
    metadata:
      labels:
        app: kakey-loki
    spec:
      containers:
      - name: kakey-loki
        image: grafana/loki:2.9.0
        ports:
        - containerPort: 3100
        # command: ["-config.file=/etc/loki/local-config.yaml"]
