Telemetry/kube/collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: otel-collector-service

apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: otel-collector-service
spec:
  type: ClusterIP
  selector:
    app: kakey-otel-collector
  ports:
    - port: 4317
      targetPort: 4317
