Telemetry/kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: kakey-grafana-service
spec:
  type: ClusterIP
  selector:
    app: kakey-grafana
  ports:
    - port: 3000
      targetPort: 3000
