Telemetry/kube/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
