Telemetry/kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: kakey-blazor-service
spec:
  type: ClusterIP
  selector:
    app: kakey-blazor-web
  ports:
    - port: 8080
      targetPort: 8080
