Telemetry/kube/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: kakey-grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.kakeysbakery.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kakey-grafana-service
            port:
              number: 3000
