Telemetry/kube/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: kakey-prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.${SUBDOMAIN}.kakeysbakery.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
