Telemetry/kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: kakey-blazor-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kakeysbakery.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kakey-blazor-service
            port:
              number: 8080
